Completion with resolve (#32)
* add version that contains return statement

* first try to cache completion results

* trying resolve on cached data

* resolve copies completion

* completion with double completionStart

* complex completion works

* trying to merge text edits

* working one big insertion

* caret moving first version

* fix same range bug

* rearrange and cleanup code

* add annotations

* remove redundant warn

* change filter text

* commit remove additional completion info

* simplify completion code

* bugfix in ranges collision

* trying not sort to finde snippet index

* try to calculate inserted offsets

* snippet insertion

* vscode additional edits bug

* complex completion with tree map

* regroup code in static methods

* resolve copy bug

* place algorithm in text util

* add template of merge tests

* add completion resolve kind

* delete extra spaces

* add test cases for merge algorithm

* add comments to tests

* fix old tests

* fix old tests and add new for completion resolve

* replace pair to more readable structure

* fix code rename bug

* add integration test for resolve

* wrap exceptions

* rename TextUtil method

* add annotations to util methods

* fix upper and lower bounds in merge

* fix name of converting method

* replace public structures inside package

* replace converting methods inside completion service

* replace public structures inside package

* remove redundant public keyword

* code rearrangement

* renames

* moves

* minor

* minor

Co-authored-by: Sergey.Anchipolevsky <serganch@gmail.com>