@@ -18,7 +18,6 @@ import org.jetbrains.annotations.Nullable;
 import org.rri.server.util.Metrics;
 import org.rri.server.util.MiscUtil;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
@@ -50,7 +49,6 @@ public class LspServer implements LanguageServer, LanguageClientAware, LspSessio
   public CompletableFuture<InitializeResult> initialize(@NotNull InitializeParams params) {
     return CompletableFuture.supplyAsync(() -> {
       final var workspaceFolders = params.getWorkspaceFolders();
-
       var oldProject = project;
       if(oldProject != null) {
         if(oldProject.isOpen()) {
@@ -85,7 +83,8 @@ public class LspServer implements LanguageServer, LanguageClientAware, LspSessio
 
   @NotNull
   private CompletionOptions defaultCompletionOptions() {
-    var completionOptions = new CompletionOptions(true, Arrays.asList(".", "@", "#"));
+    var completionOptions = new CompletionOptions(true, List.of(".", "@"));
+    completionOptions.setResolveProvider(true);
     var completionItemOptions = new CompletionItemOptions();
     completionItemOptions.setLabelDetailsSupport(true);
     completionOptions.setCompletionItem(completionItemOptions);
